# djcifex

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
src/: meson.build
src/cifex-cli/: argparse.c  main.c  meson.build
src/libcifex/: alloc.c  cxcompilers.h  cxensure.h  cxstrings.h  cxutil.h  decode.c  encode.c  ensure.h  errors.c  image.c  io.c  meson.build  strconsts.txt
src/libcifex/build_scripts/: generate_strconsts.py
src/libcifex/public/: libcifex.h
test-images/failing/: no-data.cif
test-images/passing/: additional-spacing.cif
util/: lldb-targets.txt
